# repo-a

./: .bazelrc  MODULE.bazel
src/main/java/com/company/hello/: BUILD.bazel  SayHello.java
src/main/java/com/company/salutations/: BUILD.bazel  Salutations.java
